--- a/src/main/resources/com/example/fmradio/Listener/RateShow.fxml
+++ b/src/main/resources/com/example/fmradio/Listener/RateShow.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Listener.RateShow">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Listener.RateShowContoller">
    <children>
       <Label layoutX="49.0" layoutY="48.0" text="Show Title" />
       <Label layoutX="59.0" layoutY="96.0" text="Rating" />
