--- a/src/main/resources/com/example/fmradio/Listener/SongRequest.fxml
+++ b/src/main/resources/com/example/fmradio/Listener/SongRequest.fxml
@@ -9,23 +9,22 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.SongRequest">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Listener.SongRequestController">
    <children>
       <Label layoutX="38.0" layoutY="51.0" prefHeight="18.0" prefWidth="57.0" text="Song title" />
       <Label layoutX="36.0" layoutY="87.0" text="Artist name" />
-      <TextField layoutX="111.0" layoutY="47.0" />
-      <TextField layoutX="112.0" layoutY="83.0" />
-      <TextArea layoutX="38.0" layoutY="224.0" prefHeight="104.0" prefWidth="200.0" text="Shout out message " />
-      <TableView layoutX="338.0" layoutY="176.0" prefHeight="200.0" prefWidth="229.0">
+      <TextField fx:id="songTtitleTextfield" layoutX="111.0" layoutY="47.0" />
+      <TextField fx:id="artistNameTextField" layoutX="112.0" layoutY="83.0" />
+      <TextArea fx:id="shoutOutMessageTextArea" layoutX="38.0" layoutY="224.0" prefHeight="104.0" prefWidth="200.0" text="Shout out message " />
+      <TableView fx:id="songRequestTableView" layoutX="338.0" layoutY="176.0" prefHeight="200.0" prefWidth="229.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="Song title" />
-          <TableColumn prefWidth="75.0" text="Artist" />
-            <TableColumn prefWidth="75.0" text="Date" />
+          <TableColumn fx:id="songTitleColumn" prefWidth="75.0" text="Song title" />
+          <TableColumn fx:id="artistNameColumn" prefWidth="75.0" text="Artist" />
+            <TableColumn fx:id="dateColumn" prefWidth="75.0" text="Date" />
         </columns>
       </TableView>
-      <Button layoutX="411.0" layoutY="49.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="113.0" text="Submit Request" />
-      <DatePicker layoutX="112.0" layoutY="125.0" />
+      <Button layoutX="411.0" layoutY="49.0" mnemonicParsing="false" onAction="#submitSongRequestButtonOnAction" prefHeight="51.0" prefWidth="113.0" text="Submit Request" />
+      <DatePicker fx:id="dateDatePicker" layoutX="112.0" layoutY="125.0" />
       <Label layoutX="53.0" layoutY="129.0" text="Date" />
    </children>
 </AnchorPane>
