--- a/src/main/resources/com/example/fmradio/Listener/SongRequest.fxml
+++ b/src/main/resources/com/example/fmradio/Listener/SongRequest.fxml
@@ -24,7 +24,7 @@
         </columns>
       </TableView>
       <Button layoutX="411.0" layoutY="49.0" mnemonicParsing="false" onAction="#submitSongRequestButtonOnAction" prefHeight="51.0" prefWidth="113.0" text="Submit Request" />
-      <DatePicker fx:id="dateDatePicker" layoutX="112.0" layoutY="125.0" />
+      <DatePicker fx:id="requestdateDatePicker" layoutX="112.0" layoutY="125.0" />
       <Label layoutX="53.0" layoutY="129.0" text="Date" />
    </children>
 </AnchorPane>
