--- a/src/main/resources/com/example/fmradio/Listener/ListenerPollParticipation.fxml
+++ b/src/main/resources/com/example/fmradio/Listener/ListenerPollParticipation.fxml
@@ -14,21 +14,23 @@
       <TextField fx:id="listenerIDTextfield" layoutX="124.0" layoutY="39.0" />
       <TableView fx:id="pollParticipationTableview" layoutX="336.0" layoutY="43.0" prefHeight="200.0" prefWidth="211.0">
         <columns>
-          <TableColumn fx:id="questionNoColumn" prefWidth="92.79998779296875" text="Question No." />
+          <TableColumn prefWidth="92.79998779296875" text="Poll title" />
           <TableColumn fx:id="selcetOptionColumn" prefWidth="116.0" text="Selected Option" />
         </columns>
       </TableView>
-      <ComboBox fx:id="questionNoComboBox" layoutX="132.0" layoutY="91.0" prefWidth="150.0" />
+      <ComboBox fx:id="pollTitleComboBox" layoutX="132.0" layoutY="91.0" prefWidth="150.0" />
       <ComboBox fx:id="selectOptionComboBox" layoutX="132.0" layoutY="152.0" prefWidth="150.0" />
       <Button layoutX="161.0" layoutY="245.0" mnemonicParsing="false" onAction="#loadPollOnAction" prefHeight="38.0" prefWidth="82.0" text="Load Polls" />
-      <Label layoutX="57.0" layoutY="95.0" text="Question No." />
+      <Label layoutX="57.0" layoutY="95.0" text="Poll title" />
       <Label layoutX="41.0" layoutY="156.0" text="Selected Option" />
       <Button layoutX="44.0" layoutY="245.0" mnemonicParsing="false" onAction="#submitPollAnswerButtonOnAction" prefHeight="38.0" prefWidth="96.0" text="Submit Answer" />
-      <TableView layoutX="38.0" layoutY="322.0" onSort="#advertiserPollTableview" prefHeight="200.0" prefWidth="404.0">
+      <TableView layoutX="38.0" layoutY="322.0" onSort="#advertiserPollTableview" prefHeight="200.0" prefWidth="513.0">
         <columns>
-          <TableColumn fx:id="advertiserPollQuestionNoColumn" prefWidth="102.4000244140625" text="Question No. " />
-          <TableColumn fx:id="questionsColumnAdvertiserTableview" prefWidth="300.79998779296875" text="Questions" />
+          <TableColumn fx:id="pollTtitleColoumn" prefWidth="102.4000244140625" text="Poll title " />
+          <TableColumn prefWidth="129.60003662109375" text="Advertiser ID" />
+            <TableColumn prefWidth="275.199951171875" text="Question" />
         </columns>
       </TableView>
+      <Label layoutX="349.0" layoutY="270.0" prefHeight="26.0" prefWidth="211.0" text="PLease choose a option if you have not" />
    </children>
 </AnchorPane>
