some class updates

--- a/src/main/resources/com/example/fmradio/Listener/BookMarkShow.fxml
+++ b/src/main/resources/com/example/fmradio/Listener/BookMarkShow.fxml
@@ -6,8 +6,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Listener.BookMarkShowController">
    <children>
@@ -28,5 +28,7 @@
             <TableColumn fx:id="bookMarkCategoryColumn" prefWidth="214.4000244140625" text="Category" />
         </columns>
       </TableView>
+      <Label layoutX="77.0" layoutY="14.0" text="ListenerID" />
+      <TextField layoutX="139.0" layoutY="10.0" />
    </children>
 </AnchorPane>
