--- a/src/main/resources/com/example/fmradio/Advertiser/AdvertiserPollCreation.fxml
+++ b/src/main/resources/com/example/fmradio/Advertiser/AdvertiserPollCreation.fxml
@@ -34,5 +34,7 @@
       <Label layoutX="399.0" layoutY="156.0" text="Poll Subject" />
       <Button layoutX="390.0" layoutY="234.0" mnemonicParsing="false" onAction="#validatePollButtonOnAction" prefHeight="44.0" prefWidth="86.0" text="Validate Poll " />
       <Label fx:id="showSuccessFailLabel" layoutX="433.0" layoutY="362.0" prefHeight="62.0" prefWidth="142.0" text="Succes/Fail of poll creation" />
+      <Label layoutX="416.0" layoutY="64.0" text="Poll ID:" />
+      <TextField layoutX="462.0" layoutY="60.0" />
    </children>
 </AnchorPane>
