--- a/src/main/resources/com/example/fmradio/Listener/RateShow.fxml
+++ b/src/main/resources/com/example/fmradio/Listener/RateShow.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Listener.RateShowContoller">
    <children>
       <Label layoutX="49.0" layoutY="48.0" text="Show Title" />
@@ -30,5 +29,7 @@
             <TableColumn fx:id="commentColumn" prefWidth="165.5999755859375" text="Comment" />
         </columns>
       </TableView>
+      <Label layoutX="46.0" layoutY="14.0" text="Listener ID:" />
+      <TextField layoutX="109.0" layoutY="10.0" />
    </children>
 </AnchorPane>
