--- a/src/main/resources/com/example/fmradio/StationManager/EmergencyCancelFxml.fxml
+++ b/src/main/resources/com/example/fmradio/StationManager/EmergencyCancelFxml.fxml
@@ -7,11 +7,10 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="470.0" prefWidth="714.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.StationManager.EmergencyCancelFxmlController">
    <children>
       <TextArea fx:id="reciveAlertTextArea" layoutX="439.0" layoutY="14.0" prefHeight="119.0" prefWidth="236.0" />
-      <TableView fx:id="onGoingShowTable" layoutX="14.0" layoutY="158.0" prefHeight="200.0" prefWidth="369.0">
+      <TableView fx:id="onGoingShowTable" layoutX="20.0" layoutY="190.0" prefHeight="200.0" prefWidth="369.0">
         <columns>
           <TableColumn fx:id="showNameCOl" prefWidth="102.66665267944336" text="Show Name" />
           <TableColumn fx:id="showTimeCol" prefWidth="96.00000762939453" text="Show Time" />
@@ -19,16 +18,19 @@
             <TableColumn fx:id="producerCol" prefWidth="84.66668701171875" text="Producer" />
         </columns>
       </TableView>
-      <Button layoutX="85.0" layoutY="389.0" mnemonicParsing="false" onAction="#cancelShowOA" text="Cancel Show" />
-      <Button layoutX="245.0" layoutY="389.0" mnemonicParsing="false" onAction="#notifyUsersOA" text="Notify Users" />
-      <TableView fx:id="availableTableView" layoutX="408.0" layoutY="158.0" prefHeight="200.0" prefWidth="281.0">
+      <Button layoutX="68.0" layoutY="414.0" mnemonicParsing="false" onAction="#cancelShowOA" text="Cancel Show" />
+      <Button layoutX="246.0" layoutY="414.0" mnemonicParsing="false" onAction="#notifyUsersOA" text="Notify Users" />
+      <TableView fx:id="availableTableView" layoutX="410.0" layoutY="190.0" prefHeight="200.0" prefWidth="281.0">
         <columns>
           <TableColumn fx:id="availableRjCol" prefWidth="84.6666259765625" text="Rj " />
           <TableColumn fx:id="availableProducerCol" prefWidth="84.00006103515625" text="Producer" />
             <TableColumn fx:id="timeSlotCol" prefWidth="111.99996948242188" text="Time slot" />
         </columns>
       </TableView>
-      <Button layoutX="422.0" layoutY="389.0" mnemonicParsing="false" onAction="#addNewShowOA" prefHeight="25.0" prefWidth="144.0" text="Add New Show" />
+      <Button layoutX="439.0" layoutY="414.0" mnemonicParsing="false" onAction="#addNewShowOA" prefHeight="25.0" prefWidth="144.0" text="Add New Show" />
       <Label layoutX="335.0" layoutY="65.0" prefHeight="17.0" prefWidth="95.0" text="Alert Message" />
+      <Button layoutX="335.0" layoutY="107.0" mnemonicParsing="false" onAction="#receiveAlertOA" text="Receive Alert" />
+      <Label fx:id="confirmationLabel" layoutX="44.0" layoutY="11.0" prefHeight="108.0" prefWidth="213.0" text="Label" />
+      <Label layoutX="116.0" layoutY="141.0" text="Confirmation" />
    </children>
 </AnchorPane>
