--- a/src/main/resources/com/example/fmradio/StationManager/SocialMediaFxml.fxml
+++ b/src/main/resources/com/example/fmradio/StationManager/SocialMediaFxml.fxml
@@ -8,18 +8,17 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="484.0" prefWidth="695.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.StationManager.SocialMediaFxmlController">
    <children>
       <TextArea fx:id="showReportTextArea" layoutX="331.0" layoutY="28.0" prefHeight="135.0" prefWidth="349.0" />
       <TextField fx:id="suggestionTextField" layoutX="84.0" layoutY="39.0" prefHeight="70.0" prefWidth="221.0" />
       <Label layoutX="14.0" layoutY="65.0" text="Suggestion" />
-      <TableView fx:id="reportTableView" layoutX="41.0" layoutY="242.0" prefHeight="200.0" prefWidth="633.0">
+      <TableView fx:id="reportTableView" layoutX="14.0" layoutY="242.0" prefHeight="200.0" prefWidth="648.0">
         <columns>
           <TableColumn fx:id="showNameCol" prefWidth="114.66667938232422" text="Show Name" />
-          <TableColumn fx:id="reportCol" prefWidth="156.66661071777344" text="Report" />
-            <TableColumn fx:id="performanceCol" prefWidth="276.6665954589844" text="Performance" />
-            <TableColumn fx:id="archiveCol" prefWidth="84.00006103515625" text="Archive" />
+          <TableColumn fx:id="reportCol" prefWidth="226.6666717529297" text="Report" />
+            <TableColumn fx:id="suggestionCol" prefWidth="206.66665649414062" text="Suggestion" />
+            <TableColumn fx:id="archiveCol" prefWidth="97.3333740234375" text="Archive" />
         </columns>
       </TableView>
       <Button layoutX="32.0" layoutY="189.0" mnemonicParsing="false" onAction="#openReportOA" text="Open Report" />
