--- a/src/main/resources/com/example/fmradio/Listener/SongRequest.fxml
+++ b/src/main/resources/com/example/fmradio/Listener/SongRequest.fxml
@@ -16,11 +16,12 @@
       <TextField fx:id="songTtitleTextfield" layoutX="111.0" layoutY="47.0" />
       <TextField fx:id="artistNameTextField" layoutX="112.0" layoutY="83.0" />
       <TextArea fx:id="shoutOutMessageTextArea" layoutX="38.0" layoutY="224.0" prefHeight="104.0" prefWidth="200.0" text="Shout out message " />
-      <TableView fx:id="songRequestTableView" layoutX="338.0" layoutY="176.0" prefHeight="200.0" prefWidth="229.0">
+      <TableView fx:id="songRequestTableView" layoutX="261.0" layoutY="186.0" prefHeight="200.0" prefWidth="305.0">
         <columns>
           <TableColumn fx:id="songTitleColumn" prefWidth="75.0" text="Song title" />
           <TableColumn fx:id="artistNameColumn" prefWidth="75.0" text="Artist" />
             <TableColumn fx:id="dateColumn" prefWidth="75.0" text="Date" />
+            <TableColumn fx:id="messageColumn" prefWidth="75.0" text="Message" />
         </columns>
       </TableView>
       <Button layoutX="411.0" layoutY="49.0" mnemonicParsing="false" onAction="#submitSongRequestButtonOnAction" prefHeight="51.0" prefWidth="113.0" text="Submit Request" />
