--- a/src/main/resources/com/example/fmradio/Listener/CreatePlaylist.fxml
+++ b/src/main/resources/com/example/fmradio/Listener/CreatePlaylist.fxml
@@ -4,35 +4,24 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Listener.CreatePlaylistController">
    <children>
-      <TextField layoutX="150.0" layoutY="94.0" />
-      <Label layoutX="37.0" layoutY="98.0" text="Enter Playlist Name" />
+      <TextField fx:id="playListNmaeTextField" layoutX="157.0" layoutY="50.0" />
+      <Label layoutX="46.0" layoutY="54.0" text="Enter Playlist Name" />
       <Line endX="-100.0" endY="196.40000915527344" layoutX="431.0" layoutY="46.0" startX="-100.0" />
-      <Label layoutX="425.0" layoutY="28.0" text="Select Five Songs" />
-      <ComboBox layoutX="435.0" layoutY="72.0" prefWidth="150.0" promptText="Song One" />
-      <ComboBox layoutX="435.0" layoutY="113.0" prefWidth="150.0" promptText="Song Two" />
-      <ComboBox layoutX="435.0" layoutY="151.0" prefWidth="150.0" promptText="Song three" />
-      <ComboBox layoutX="435.0" layoutY="187.0" prefWidth="150.0" promptText="Song four" />
-      <ComboBox layoutX="435.0" layoutY="220.0" prefWidth="150.0" promptText="Song Five" />
-      <Label layoutX="58.0" layoutY="46.0" text="Listener ID:" />
-      <TextField layoutX="151.0" layoutY="42.0" />
-      <TableView layoutX="105.0" layoutY="265.0" prefHeight="200.0" prefWidth="325.0">
-        <columns>
-          <TableColumn prefWidth="92.800048828125" text="Playlist Name" />
-          <TableColumn prefWidth="116.0" text="Number of Songs" />
-            <TableColumn prefWidth="116.0" text="Date Created" />
-        </columns>
-      </TableView>
-      <Label layoutX="46.0" layoutY="142.0" text="Date of Created" />
-      <DatePicker layoutX="144.0" layoutY="139.0" />
-      <Button layoutX="62.0" layoutY="200.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="102.0" text="Save Playlist" />
+      <Label layoutX="397.0" layoutY="28.0" text="Select Five Songs from Five Genre" />
+      <ComboBox fx:id="firstSongComboBox" layoutX="435.0" layoutY="72.0" prefWidth="150.0" promptText="Rock" />
+      <ComboBox fx:id="secondSongComboBox" layoutX="435.0" layoutY="113.0" prefWidth="150.0" promptText="Hip-Hop" />
+      <ComboBox fx:id="thirdSongComboBox" layoutX="435.0" layoutY="151.0" prefWidth="150.0" promptText="Pop" />
+      <ComboBox fx:id="fourthSongComBox" layoutX="435.0" layoutY="187.0" prefWidth="150.0" promptText="Jazz" />
+      <ComboBox fx:id="fifthSongComboBox" layoutX="435.0" layoutY="220.0" prefWidth="150.0" promptText="Classical" />
+      <Label layoutX="44.0" layoutY="98.0" text="Date of Created" />
+      <DatePicker fx:id="createPlayListDatePicker" layoutX="144.0" layoutY="94.0" />
+      <Button layoutX="97.0" layoutY="182.0" mnemonicParsing="false" onAction="#savePlayListButton" prefHeight="36.0" prefWidth="102.0" text="Save Playlist" />
+      <Button layoutX="86.0" layoutY="278.0" mnemonicParsing="false" onAction="#historyPLayListButton" prefHeight="54.0" prefWidth="431.0" text="See your PlayList History" />
    </children>
 </AnchorPane>
