--- a/src/main/resources/com/example/fmradio/ListenerDashboard.fxml
+++ b/src/main/resources/com/example/fmradio/ListenerDashboard.fxml
@@ -18,5 +18,6 @@
       <Button layoutX="87.0" layoutY="302.0" mnemonicParsing="false" onAction="#bookMarkButtonOnAction" prefHeight="86.0" prefWidth="106.0" text="Book Mark" />
       <Button layoutX="315.0" layoutY="302.0" mnemonicParsing="false" onAction="#reportButtonOnAction" prefHeight="86.0" prefWidth="100.0" text="Report" />
       <Button layoutX="529.0" layoutY="302.0" mnemonicParsing="false" onAction="#songHistoryButtonOnAction" prefHeight="86.0" prefWidth="106.0" text="Song History" />
+      <Button layoutX="114.0" layoutY="441.0" mnemonicParsing="false" onAction="#createPlaylistDashBoardButtonOnAction" prefHeight="60.0" prefWidth="90.0" text="Create Playlist" />
    </children>
 </AnchorPane>
