--- a/src/main/resources/com/example/fmradio/StationManager/EmergencyCancelFxml.fxml
+++ b/src/main/resources/com/example/fmradio/StationManager/EmergencyCancelFxml.fxml
@@ -18,8 +18,8 @@
             <TableColumn fx:id="producerCol" prefWidth="84.66668701171875" text="Producer" />
         </columns>
       </TableView>
-      <Button layoutX="68.0" layoutY="414.0" mnemonicParsing="false" onAction="#cancelShowOA" text="Cancel Show" />
-      <Button layoutX="246.0" layoutY="414.0" mnemonicParsing="false" onAction="#notifyUsersOA" text="Notify Users" />
+      <Button layoutX="55.0" layoutY="414.0" mnemonicParsing="false" onAction="#cancelShowOA" text="Cancel Show" />
+      <Button layoutX="197.0" layoutY="414.0" mnemonicParsing="false" onAction="#notifyUsersOA" text="Notify Users" />
       <TableView fx:id="availableTableView" layoutX="410.0" layoutY="190.0" prefHeight="200.0" prefWidth="281.0">
         <columns>
           <TableColumn fx:id="availableRjCol" prefWidth="84.6666259765625" text="Rj " />
@@ -27,10 +27,11 @@
             <TableColumn fx:id="timeSlotCol" prefWidth="111.99996948242188" text="Time slot" />
         </columns>
       </TableView>
-      <Button layoutX="439.0" layoutY="414.0" mnemonicParsing="false" onAction="#addNewShowOA" prefHeight="25.0" prefWidth="144.0" text="Add New Show" />
+      <Button layoutX="348.0" layoutY="414.0" mnemonicParsing="false" onAction="#addNewShowOA" prefHeight="25.0" prefWidth="144.0" text="Add New Show" />
       <Label layoutX="335.0" layoutY="65.0" prefHeight="17.0" prefWidth="95.0" text="Alert Message" />
       <Button layoutX="335.0" layoutY="107.0" mnemonicParsing="false" onAction="#receiveAlertOA" text="Receive Alert" />
       <Label fx:id="confirmationLabel" layoutX="44.0" layoutY="11.0" prefHeight="108.0" prefWidth="213.0" text="Label" />
       <Label layoutX="116.0" layoutY="141.0" text="Confirmation" />
+      <Button layoutX="569.0" layoutY="414.0" mnemonicParsing="false" onAction="#mainMenuOA" text="Mainmenu" />
    </children>
 </AnchorPane>
