--- a/src/main/resources/com/example/fmradio/StationManager/FinalPlaylistFxml.fxml
+++ b/src/main/resources/com/example/fmradio/StationManager/FinalPlaylistFxml.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane prefHeight="523.0" prefWidth="653.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.StationManager.FinalPlaylistFxmlController">
    <children>
-      <TableView fx:id="dailtPlaylistTableView" layoutX="65.0" layoutY="95.0" prefHeight="200.0" prefWidth="451.0">
+      <TableView fx:id="dailyPlaylistTableView" layoutX="65.0" layoutY="95.0" prefHeight="200.0" prefWidth="451.0">
         <columns>
           <TableColumn fx:id="songNameCol" prefWidth="98.00003814697266" text="Song Name" />
           <TableColumn fx:id="artistCol" prefWidth="105.99995422363281" text="Artist" />
@@ -22,5 +22,7 @@
       <Button layoutX="494.0" layoutY="350.0" mnemonicParsing="false" onAction="#notifyProducerAndRjOA" text="Notify Producer and Rj" />
       <Button layoutX="529.0" layoutY="441.0" mnemonicParsing="false" onAction="#backToMainMenuOA" text="Back to Main Menu" />
       <Button layoutX="41.0" layoutY="350.0" mnemonicParsing="false" onAction="#receivePlaylistOA" text="Receive Playlist" />
+      <Label fx:id="statusLabel" layoutX="137.0" layoutY="433.0" prefHeight="53.0" prefWidth="321.0" />
+      <Label layoutX="75.0" layoutY="445.0" text="Status" />
    </children>
 </AnchorPane>
