--- a/src/main/resources/com/example/fmradio/StationManager/WeeklyProgramFxml.fxml
+++ b/src/main/resources/com/example/fmradio/StationManager/WeeklyProgramFxml.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane prefHeight="523.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.StationManager.WeeklyProgramFxmlController">
    <children>
-      <TableView fx:id="scheduleTableView" layoutX="19.0" layoutY="269.0" prefHeight="200.0" prefWidth="583.0">
+      <TableView fx:id="scheduleTableView" layoutX="30.0" layoutY="262.0" prefHeight="200.0" prefWidth="583.0">
         <columns>
           <TableColumn fx:id="showTimeCol" prefWidth="75.33334350585938" text="Show Time" />
           <TableColumn fx:id="showDateCol" prefWidth="87.99996948242188" text="Show Date" />
@@ -37,5 +37,6 @@
       <Label fx:id="conflictLabel" layoutX="418.0" layoutY="169.0" prefHeight="73.0" prefWidth="227.0" text="Label" />
       <Label fx:id="messageLabel" layoutX="476.0" layoutY="47.0" prefHeight="63.0" prefWidth="158.0" text="Label" />
       <Button layoutX="302.0" layoutY="213.0" mnemonicParsing="false" onAction="#checkConflictOA" text="Check Conflict" />
+      <Button layoutX="470.0" layoutY="484.0" mnemonicParsing="false" onAction="#mainMenuOA" text="Mainmenu" />
    </children>
 </AnchorPane>
