--- a/src/main/resources/com/example/fmradio/Advertiser/AdvertiserPollCreation.fxml
+++ b/src/main/resources/com/example/fmradio/Advertiser/AdvertiserPollCreation.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="533.0" prefWidth="715.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Advertiser.AdvertiserPollCreation">
+<AnchorPane prefHeight="533.0" prefWidth="715.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Advertiser.AdvertiserPollCreationController">
    <children>
       <TextField fx:id="pollQuestionTextField" layoutX="129.0" layoutY="51.0" />
       <Label layoutX="47.0" layoutY="55.0" text="Poll Question" />
@@ -19,22 +18,18 @@
       <Label layoutX="58.0" layoutY="147.0" text="Option2: " />
       <Label layoutX="59.0" layoutY="187.0" text="Option 3" />
       <Button layoutX="522.0" layoutY="223.0" mnemonicParsing="false" onAction="#createPollButtonOnAction" prefHeight="62.0" prefWidth="109.0" text="Create Poll" />
-      <DatePicker fx:id="dateDatePicker" layoutX="467.0" layoutY="107.0" />
-      <Label layoutX="430.0" layoutY="111.0" text="Date:" />
-      <TableView fx:id="createPollTableView" layoutX="31.0" layoutY="313.0" prefHeight="200.0" prefWidth="226.0">
+      <TableView fx:id="createPollTableView" layoutX="31.0" layoutY="313.0" prefHeight="200.0" prefWidth="227.0">
         <columns>
-          <TableColumn fx:id="questionNoColum" prefWidth="88.00005912780762" text="Question No." />
           <TableColumn fx:id="subjectColumn" prefWidth="62.39990997314453" text="Subject" />
             <TableColumn fx:id="dateColumn" prefWidth="75.0" text="Date" />
+            <TableColumn fx:id="optionNoCol" prefWidth="75.0" text="Option No." />
         </columns>
       </TableView>
-      <Label layoutX="47.0" layoutY="21.0" text="Question No." />
-      <TextField fx:id="questioNoTexField" layoutX="129.0" layoutY="17.0" />
-      <TextField fx:id="pollSubject" layoutX="468.0" layoutY="152.0" />
+      <TextField fx:id="pollSubjectTextField" layoutX="468.0" layoutY="152.0" />
       <Label layoutX="399.0" layoutY="156.0" text="Poll Subject" />
       <Button layoutX="390.0" layoutY="234.0" mnemonicParsing="false" onAction="#validatePollButtonOnAction" prefHeight="44.0" prefWidth="86.0" text="Validate Poll " />
       <Label fx:id="showSuccessFailLabel" layoutX="433.0" layoutY="362.0" prefHeight="62.0" prefWidth="142.0" text="Succes/Fail of poll creation" />
       <Label layoutX="416.0" layoutY="64.0" text="Poll ID:" />
-      <TextField layoutX="462.0" layoutY="60.0" />
+      <TextField fx:id="pollIDTextField" layoutX="462.0" layoutY="60.0" />
    </children>
 </AnchorPane>
