--- a/src/main/resources/com/example/fmradio/Listener/CreatePlaylist.fxml
+++ b/src/main/resources/com/example/fmradio/Listener/CreatePlaylist.fxml
@@ -22,6 +22,6 @@
       <Label layoutX="44.0" layoutY="98.0" text="Date of Created" />
       <DatePicker fx:id="createPlayListDatePicker" layoutX="144.0" layoutY="94.0" />
       <Button layoutX="97.0" layoutY="182.0" mnemonicParsing="false" onAction="#savePlayListButton" prefHeight="36.0" prefWidth="102.0" text="Save Playlist" />
-      <Button layoutX="86.0" layoutY="278.0" mnemonicParsing="false" onAction="#historyPLayListButton" prefHeight="54.0" prefWidth="431.0" text="See your PlayList History" />
+      <Button fx:id="historyPlaylistFXID" layoutX="86.0" layoutY="278.0" mnemonicParsing="false" onAction="#historyPLayListButton" prefHeight="54.0" prefWidth="431.0" text="See your PlayList History" />
    </children>
 </AnchorPane>
