--- a/src/main/resources/com/example/fmradio/Listener/ReportShow.fxml
+++ b/src/main/resources/com/example/fmradio/Listener/ReportShow.fxml
@@ -2,30 +2,29 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="425.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Listener.ReportShowController">
+<AnchorPane prefHeight="425.0" prefWidth="715.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Listener.ReportShowController">
    <children>
-      <Label layoutX="60.0" layoutY="44.0" text="Listener Id:" />
-      <TextField fx:id="listenerIDTextField" layoutX="131.0" layoutY="40.0" />
-      <ComboBox fx:id="reasonForReportComboBox" layoutX="131.0" layoutY="83.0" prefWidth="150.0" />
-      <Label layoutX="53.0" layoutY="87.0" text="Select reason" />
-      <Label layoutX="62.0" layoutY="128.0" text="Show title" />
-      <TextField fx:id="showTitleTextField" layoutX="132.0" layoutY="124.0" />
-      <Button layoutX="417.0" layoutY="60.0" mnemonicParsing="false" onAction="#submitReportButtonONaction" prefHeight="50.0" prefWidth="80.0" text="Submit" />
+      <ComboBox fx:id="reasonForReportComboBox" layoutX="131.0" layoutY="38.0" prefWidth="150.0" />
+      <Label layoutX="53.0" layoutY="42.0" text="Select reason" />
+      <Label layoutX="62.0" layoutY="85.0" text="Show title" />
+      <TextField fx:id="showTitleTextField" layoutX="131.0" layoutY="81.0" />
+      <Button layoutX="318.0" layoutY="137.0" mnemonicParsing="false" onAction="#submitReportButtonONaction" prefHeight="50.0" prefWidth="80.0" text="Submit" />
       <TableView fx:id="listenerReportTableView" layoutX="32.0" layoutY="214.0" prefHeight="200.0" prefWidth="387.0">
         <columns>
             <TableColumn fx:id="showTitleColumn" prefWidth="128.0" text="Show title" />
-            <TableColumn fx:id="showTitleColumn1" prefWidth="128.0" text="Reason" />
-            <TableColumn fx:id="showTitleColumn11" prefWidth="128.0" text="Date" />
+            <TableColumn fx:id="reasonColumn1" prefWidth="128.0" text="Reason" />
+            <TableColumn fx:id="dateColumn" prefWidth="128.0" text="Date" />
         </columns>
       </TableView>
-      <DatePicker fx:id="reportdateDatePicker" layoutX="125.0" layoutY="168.0" />
-      <Label layoutX="75.0" layoutY="172.0" text="Date" />
+      <TextArea fx:id="additionaleCommentTextArea" layoutX="466.0" layoutY="211.0" prefHeight="200.0" prefWidth="200.0" />
+      <Label layoutX="510.0" layoutY="179.0" text="Additional Comment" />
+      <Label fx:id="feebackLabel" alignment="CENTER" layoutX="430.0" layoutY="34.0" prefHeight="58.0" prefWidth="233.0" text="Feedback for your addtional Comment" />
    </children>
 </AnchorPane>
