--- a/src/main/resources/com/example/fmradio/Advertiser/AdvertiserPollCreation.fxml
+++ b/src/main/resources/com/example/fmradio/Advertiser/AdvertiserPollCreation.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="533.0" prefWidth="715.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Advertiser.AdvertiserPollCreationController">
+<AnchorPane prefHeight="680.0" prefWidth="781.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Advertiser.AdvertiserPollCreationController">
    <children>
       <TextField fx:id="pollQuestionTextField" layoutX="129.0" layoutY="51.0" />
       <Label layoutX="47.0" layoutY="55.0" text="Poll Question" />
@@ -17,19 +17,26 @@
       <TextField fx:id="optionThreeTextField" layoutX="131.0" layoutY="183.0" />
       <Label layoutX="58.0" layoutY="147.0" text="Option2: " />
       <Label layoutX="59.0" layoutY="187.0" text="Option 3" />
-      <Button layoutX="522.0" layoutY="223.0" mnemonicParsing="false" onAction="#createPollButtonOnAction" prefHeight="62.0" prefWidth="109.0" text="Create Poll" />
-      <TableView fx:id="createPollTableView" layoutX="31.0" layoutY="313.0" prefHeight="200.0" prefWidth="227.0">
+      <Button layoutX="564.0" layoutY="285.0" mnemonicParsing="false" onAction="#createPollButtonOnAction" prefHeight="62.0" prefWidth="109.0" text="Create Poll" />
+      <TableView fx:id="createPollTableView" layoutX="24.0" layoutY="234.0" prefHeight="200.0" prefWidth="214.0">
         <columns>
-          <TableColumn fx:id="subjectColumn" prefWidth="62.39990997314453" text="Subject" />
+          <TableColumn fx:id="subjectColumn" prefWidth="62.39990997314453" text="Poll title" />
             <TableColumn fx:id="dateColumn" prefWidth="75.0" text="Date" />
             <TableColumn fx:id="optionNoCol" prefWidth="75.0" text="Option No." />
         </columns>
       </TableView>
-      <TextField fx:id="pollSubjectTextField" layoutX="468.0" layoutY="152.0" />
-      <Label layoutX="399.0" layoutY="156.0" text="Poll Subject" />
-      <Button layoutX="390.0" layoutY="234.0" mnemonicParsing="false" onAction="#validatePollButtonOnAction" prefHeight="44.0" prefWidth="86.0" text="Validate Poll " />
-      <Label fx:id="showSuccessFailLabel" layoutX="433.0" layoutY="362.0" prefHeight="62.0" prefWidth="142.0" text="Succes/Fail of poll creation" />
-      <Label layoutX="416.0" layoutY="64.0" text="Poll ID:" />
-      <TextField fx:id="pollIDTextField" layoutX="462.0" layoutY="60.0" />
+      <TextField fx:id="pollSubjectTextField" layoutX="502.0" layoutY="51.0" />
+      <Label layoutX="435.0" layoutY="55.0" text="Poll Title" />
+      <Button layoutX="449.0" layoutY="294.0" mnemonicParsing="false" onAction="#validatePollButtonOnAction" prefHeight="44.0" prefWidth="86.0" text="Validate Poll " />
+      <Label fx:id="showSuccessFailLabel" layoutX="476.0" layoutY="124.0" prefHeight="75.0" prefWidth="142.0" text="Succes/Fail of poll creation" />
+      <TableView fx:id="advertiserPollTableview" layoutX="40.0" layoutY="466.0" prefHeight="200.0" prefWidth="700.0">
+         <columns>
+            <TableColumn fx:id="pollTtitleColoumn" prefWidth="102.4000244140625" text="Poll title " />
+            <TableColumn fx:id="questionColoumn" prefWidth="220.79998779296875" text="Question" />
+            <TableColumn fx:id="optionOneColoumn" prefWidth="125.5999755859375" text="Option 1" />
+            <TableColumn fx:id="optionTwoColoumn" prefWidth="125.5999755859375" text="Option 2" />
+            <TableColumn fx:id="optionThreeCol" prefWidth="125.5999755859375" text="Option 3" />
+         </columns>
+      </TableView>
    </children>
 </AnchorPane>
