--- a/src/main/resources/com/example/fmradio/Advertiser/SponsorPlaylist.fxml
+++ b/src/main/resources/com/example/fmradio/Advertiser/SponsorPlaylist.fxml
@@ -6,26 +6,20 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Advertiser.SponsorPlaylistController">
    <children>
-      <Label layoutX="68.0" layoutY="51.0" text="Advertiser ID: " />
-      <TextField layoutX="158.0" layoutY="47.0" />
-      <Label layoutX="67.0" layoutY="98.0" text="playlist names" />
-      <Label layoutX="67.0" layoutY="139.0" text="sponsorship date" />
-      <ComboBox layoutX="150.0" layoutY="94.0" prefWidth="150.0" />
+      <Label layoutX="67.0" layoutY="57.0" text="playlist names" />
+      <ComboBox fx:id="playlistLoadedNamesComboBox" layoutX="149.0" layoutY="53.0" prefWidth="150.0" />
       <DatePicker layoutX="-99.0" layoutY="-57.0" />
-      <DatePicker layoutX="170.0" layoutY="135.0" />
-      <TableView layoutX="68.0" layoutY="195.0" prefHeight="200.0" prefWidth="302.0">
+      <TableView fx:id="sponsorTableView" layoutX="149.0" layoutY="186.0" prefHeight="200.0" prefWidth="202.0">
         <columns>
-          <TableColumn prefWidth="97.60003662109375" text="Listener ID" />
-          <TableColumn prefWidth="88.80000305175781" text="Playlist Name" />
-            <TableColumn prefWidth="112.800048828125" text="Sponsored date" />
+          <TableColumn fx:id="playListNamesCol" prefWidth="88.80000305175781" text="Playlist Name" />
+            <TableColumn fx:id="sponsorDateCol" prefWidth="112.800048828125" text="Sponsored date" />
         </columns>
       </TableView>
-      <Button layoutX="469.0" layoutY="86.0" mnemonicParsing="false" text="Submit Button" />
+      <Button layoutX="432.0" layoutY="114.0" mnemonicParsing="false" onAction="#submitToSponsorButtonOnAction" text="Submit Button" />
+      <Button layoutX="116.0" layoutY="114.0" mnemonicParsing="false" onAction="#loadPlaylistnamesButtonOnAction" text="Load" />
    </children>
 </AnchorPane>
