--- a/src/main/resources/com/example/fmradio/Listener/BookMarkShow.fxml
+++ b/src/main/resources/com/example/fmradio/Listener/BookMarkShow.fxml
@@ -6,19 +6,19 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Listener.BookMarkShowController">
    <children>
       <Label layoutX="68.0" layoutY="59.0" text="Show title" />
       <Label layoutX="62.0" layoutY="96.0" text="Show genre:" />
-      <ComboBox fx:id="showTitleTextField" layoutX="149.0" layoutY="55.0" prefWidth="150.0" />
-      <ComboBox fx:id="showGenreTextField" layoutX="149.0" layoutY="92.0" prefWidth="150.0" />
+      <ComboBox fx:id="showGenreComboBox" layoutX="149.0" layoutY="92.0" prefWidth="150.0" />
       <DatePicker fx:id="bookMarkDateDatePicker" layoutX="149.0" layoutY="131.0" />
       <Label layoutX="62.0" layoutY="135.0" text="Book Mark date" />
       <Label layoutX="54.0" layoutY="182.0" text="Bookmark category selection" />
       <ComboBox fx:id="bookMarkCategoryComboBox" layoutX="213.0" layoutY="178.0" prefWidth="150.0" />
-      <Button layoutX="445.0" layoutY="92.0" mnemonicParsing="false" onAction="#saveBookMarkButtonOnAction" text="Save Bookmark" />
+      <Button layoutX="440.0" layoutY="224.0" mnemonicParsing="false" onAction="#saveBookMarkButtonOnAction" text="Save Bookmark" />
       <TableView fx:id="bookMarkTableView" layoutX="31.0" layoutY="274.0" prefHeight="200.0" prefWidth="554.0">
         <columns>
           <TableColumn fx:id="showTitleColumn" prefWidth="92.800048828125" text="Show Title" />
@@ -27,5 +27,7 @@
             <TableColumn fx:id="bookMarkCategoryColumn" prefWidth="214.4000244140625" text="Category" />
         </columns>
       </TableView>
+      <TextField fx:id="showTtileTextField" layoutX="139.0" layoutY="55.0" />
+      <Label fx:id="checkDuplicateLabel" layoutX="403.0" layoutY="39.0" prefHeight="82.0" prefWidth="150.0" text="Check Duplicates Title" />
    </children>
 </AnchorPane>
