--- a/src/main/resources/com/example/fmradio/Listener/ListenerDashboard.fxml
+++ b/src/main/resources/com/example/fmradio/Listener/ListenerDashboard.fxml
@@ -13,11 +13,11 @@
          </font>
       </Label>
       <Button layoutX="79.0" layoutY="124.0" mnemonicParsing="false" onAction="#songRequestButton" prefHeight="60.0" prefWidth="90.0" text="Song Request" />
-      <Button layoutX="301.0" layoutY="118.0" mnemonicParsing="false" onAction="#pollParticipationButtonOnAction" prefHeight="72.0" prefWidth="106.0" text="Poll participation" />
-      <Button layoutX="529.0" layoutY="115.0" mnemonicParsing="false" onAction="#rateShowButtonOnAction" prefHeight="72.0" prefWidth="90.0" text="Rate Show" />
-      <Button layoutX="87.0" layoutY="302.0" mnemonicParsing="false" onAction="#bookMarkButtonOnAction" prefHeight="86.0" prefWidth="106.0" text="Book Mark" />
-      <Button layoutX="315.0" layoutY="302.0" mnemonicParsing="false" onAction="#reportButtonOnAction" prefHeight="86.0" prefWidth="100.0" text="Report" />
+      <Button fx:id="pollParticipationDashFXID" layoutX="301.0" layoutY="118.0" mnemonicParsing="false" onAction="#pollParticipationButtonOnAction" prefHeight="72.0" prefWidth="106.0" text="Poll participation" />
+      <Button fx:id="rateShowDashFXID" layoutX="529.0" layoutY="115.0" mnemonicParsing="false" onAction="#rateShowButtonOnAction" prefHeight="72.0" prefWidth="90.0" text="Rate Show" />
+      <Button fx:id="bookMarkDashFXID" layoutX="87.0" layoutY="302.0" mnemonicParsing="false" onAction="#bookMarkButtonOnAction" prefHeight="86.0" prefWidth="106.0" text="Book Mark" />
+      <Button fx:id="reportShowDashFXID" layoutX="315.0" layoutY="302.0" mnemonicParsing="false" onAction="#reportButtonOnAction" prefHeight="86.0" prefWidth="100.0" text="Report" />
       <Button layoutX="529.0" layoutY="302.0" mnemonicParsing="false" onAction="#songHistoryButtonOnAction" prefHeight="86.0" prefWidth="106.0" text="Song History" />
-      <Button fx:id="createPlaylistFXID" layoutX="114.0" layoutY="441.0" mnemonicParsing="false" onAction="#createPlaylistDashBoardButtonOnAction" prefHeight="60.0" prefWidth="90.0" text="Create Playlist" />
+      <Button fx:id="createPlaylistFXID" layoutX="79.0" layoutY="442.0" mnemonicParsing="false" onAction="#createPlaylistDashBoardButtonOnAction" prefHeight="60.0" prefWidth="90.0" text="Create Playlist" />
    </children>
 </AnchorPane>
