--- a/src/main/resources/com/example/fmradio/Listener/ListenerPollParticipation.fxml
+++ b/src/main/resources/com/example/fmradio/Listener/ListenerPollParticipation.fxml
@@ -7,27 +7,29 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="536.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Listener.ListenerPollParticipationController">
+<AnchorPane prefHeight="600.0" prefWidth="742.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fmradio.Listener.ListenerPollParticipationController">
    <children>
-      <TableView fx:id="pollParticipationTableview" layoutX="336.0" layoutY="43.0" prefHeight="200.0" prefWidth="211.0">
+      <TableView fx:id="pollParticipationTableview" layoutX="458.0" layoutY="30.0" prefHeight="200.0" prefWidth="211.0">
         <columns>
-          <TableColumn prefWidth="92.79998779296875" text="Poll title" />
-          <TableColumn fx:id="selcetOptionColumn" prefWidth="116.0" text="Selected Option" />
+          <TableColumn fx:id="pollNoColoumn" prefWidth="92.79998779296875" text="Poll title" />
+          <TableColumn fx:id="chosenOptionNoColoumn" prefWidth="116.0" text="Your Option No." />
         </columns>
       </TableView>
-      <ComboBox fx:id="pollTitleComboBox" layoutX="132.0" layoutY="91.0" prefWidth="150.0" />
-      <ComboBox fx:id="selectOptionComboBox" layoutX="132.0" layoutY="152.0" prefWidth="150.0" />
-      <Button layoutX="161.0" layoutY="245.0" mnemonicParsing="false" onAction="#loadPollOnAction" prefHeight="38.0" prefWidth="82.0" text="Load Polls" />
-      <Label layoutX="57.0" layoutY="95.0" text="Poll title" />
-      <Label layoutX="41.0" layoutY="156.0" text="Selected Option" />
+      <ComboBox fx:id="pollTitleNoComboBox" layoutX="132.0" layoutY="91.0" prefWidth="150.0" />
+      <ComboBox fx:id="selectOptionComboBox" layoutX="161.0" layoutY="152.0" prefWidth="150.0" />
+      <Button layoutX="161.0" layoutY="245.0" mnemonicParsing="false" onAction="#loadPollsButtonOnAction" prefHeight="38.0" prefWidth="82.0" text="Load Polls" />
+      <Label layoutX="58.0" layoutY="95.0" text="Poll title " />
+      <Label layoutX="41.0" layoutY="156.0" text="Choose Option No." />
       <Button layoutX="44.0" layoutY="245.0" mnemonicParsing="false" onAction="#submitPollAnswerButtonOnAction" prefHeight="38.0" prefWidth="96.0" text="Submit Answer" />
-      <TableView layoutX="38.0" layoutY="322.0" onSort="#advertiserPollTableview" prefHeight="200.0" prefWidth="513.0">
+      <TableView fx:id="advertiserPollTableview" layoutX="21.0" layoutY="386.0" prefHeight="200.0" prefWidth="700.0">
         <columns>
           <TableColumn fx:id="pollTtitleColoumn" prefWidth="102.4000244140625" text="Poll title " />
-          <TableColumn prefWidth="129.60003662109375" text="Advertiser ID" />
-            <TableColumn prefWidth="279.1999755859375" text="Question" />
+            <TableColumn fx:id="questionColoumn" prefWidth="220.79998779296875" text="Question" />
+            <TableColumn fx:id="optionOneColoumn" prefWidth="125.5999755859375" text="Option 1" />
+            <TableColumn fx:id="optionTwoColoumn" prefWidth="125.5999755859375" text="Option 2" />
+            <TableColumn fx:id="optionThreeCol" prefWidth="125.5999755859375" text="Option 3" />
         </columns>
       </TableView>
-      <Label layoutX="349.0" layoutY="270.0" prefHeight="26.0" prefWidth="211.0" text="PLease choose a option if you have not" />
+      <Label fx:id="feedBackLabel" layoutX="349.0" layoutY="258.0" prefHeight="38.0" prefWidth="229.0" text=" Feed back on your Options" />
    </children>
 </AnchorPane>
